; ModuleID = '/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_imagetag_cmdline.c_imagetag_cmdline_print_version.c'
source_filename = "/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_imagetag_cmdline.c_imagetag_cmdline_print_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"%s %s\0A\00", align 1
@IMAGETAG_CMDLINE_PACKAGE_NAME = common dso_local global i8* null, align 8
@IMAGETAG_CMDLINE_PACKAGE = common dso_local global i8* null, align 8
@IMAGETAG_CMDLINE_VERSION = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @imagetag_cmdline_print_version() #0 {
  %1 = load i8*, i8** @IMAGETAG_CMDLINE_PACKAGE_NAME, align 8
  %2 = call i64 @strlen(i8* %1)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = load i8*, i8** @IMAGETAG_CMDLINE_PACKAGE_NAME, align 8
  br label %8

6:                                                ; preds = %0
  %7 = load i8*, i8** @IMAGETAG_CMDLINE_PACKAGE, align 8
  br label %8

8:                                                ; preds = %6, %4
  %9 = phi i8* [ %5, %4 ], [ %7, %6 ]
  %10 = load i8*, i8** @IMAGETAG_CMDLINE_VERSION, align 8
  %11 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %9, i8* %10)
  ret void
}

declare dso_local i32 @printf(i8*, i8*, i8*) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
